--- a/chart_app/pubspec.yaml
+++ b/chart_app/pubspec.yaml
@@ -11,8 +11,9 @@ dependencies:
     flutter:
         sdk: flutter
     deriv_chart:
-        path: ../../flutter-chart
+        path: ../../flutter-chart-fork
     js: ^0.6.7
+    web: ^1.1.1
 
 dev_dependencies:
     deriv_lint:
