chore: change deriv_chart dependency to version 0.3.9

--- a/chart_app/pubspec.yaml
+++ b/chart_app/pubspec.yaml
@@ -10,8 +10,7 @@ environment:
 dependencies:
     flutter:
         sdk: flutter
-    deriv_chart:
-        path: ../../flutter-chart-fork
+    deriv_chart: ^0.3.9
     js: ^0.6.7
     web: ^1.1.1
 
