--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -134,7 +134,7 @@ jobs:
                   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_TEST_LINKS_API_TOKEN }}
                   CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_TEST_LINKS_ACCOUNT_ID }}
                   project_name: 'derivatives-trader'
-                  branch_name: ${{ github.head_ref || github.event.inputs.smartcharts_ref }}
+                  branch_name: ${{ github.head_ref || format('{0}-{1}', github.event.inputs.smartcharts_ref, github.event.inputs.flutter_chart_ref) }}
                   output_dir: derivatives-trader/packages/core/dist
 
             - name: Generate preview link comment
